# claude-swarm-coordinator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/claude_swarm/: __init__.py  cli.py
src/claude_swarm/communication/: __init__.py  protocols.py
src/claude_swarm/core/: __init__.py  coordinator.py  distributor.py  planner.py
src/claude_swarm/evaluation/: __init__.py  dashboard.py
src/claude_swarm/merge/: __init__.py  strategies.py
src/claude_swarm/templates/: agent_instructions.md
src/claude_swarm/utils/: __init__.py  git.py  helpers.py
tests/: __init__.py  test_coordinator.py  test_planner.py
